--- a/Random​EnemyGenerator/Random​EnemyGenerator.vcxproj
+++ b/Random​EnemyGenerator/Random​EnemyGenerator.vcxproj
@@ -146,6 +146,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="RandomEnemyGenerator.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="RandomEnemyGenerator.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
