--- a/Vectors - Guide/Vectors - Guide.vcxproj.filters
+++ b/Vectors - Guide/Vectors - Guide.vcxproj.filters
@@ -19,4 +19,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="Vectors - Guide.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
